--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -24,3 +24,6 @@ header h2 {
     letter-spacing: .18rem;
 }
 
+nav ul li a {
+    padding: .8rem .6rem;
+}
