--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -14,3 +14,7 @@ ul.menu li {
     width: auto;
     text-align: center;
   }
+
+  nav ul li a {
+    padding: .8rem .45rem;
+}
