--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -61,7 +61,7 @@ nav ul li:first-child a {border-left:none;}
     background-color: lighten($menuColor, 10%);
     color: #222;
     text-decoration: none;
-    padding: .8rem .5rem;
+    padding: .8rem .05rem;
 }
 
 .active a {
